Fixed icons being in wrong place on about page. Pushed github repo link down so it's no overlapping

--- a/src/About.css
+++ b/src/About.css
@@ -44,7 +44,7 @@ body.dark-mode .go-back-btn{
 
 @media(min-width: 600px){
     .about-icon-container{
-        @apply absolute bottom-0 right-0 left-0 
+        @apply absolute -bottom-[7.8rem] right-0 left-0 
     }
 
     .team-member-container{
@@ -54,7 +54,7 @@ body.dark-mode .go-back-btn{
 
 @media(min-width: 1280px){
     .about-icon-container{
-        @apply absolute bottom-12 right-0 left-0 
+        @apply absolute -bottom-20 right-0 left-0 
     }
     
     .about-title-container{
